<?xml version="1.0"?>
<package format="2">
  <name>supreme</name>
  <version>2.6.0</version>
  <description>supreme is a ROS wrapper for the <a href="ali_subay">ali</a>
  </description>

  <maintainer email="alisubay06@hotmail.com">Ali</maintainer>
  <license>Ali</license>

  <buildtool_depend>catkin</buildtool_depend>  
  
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>rosconsole</depend>
  <depend>sensor_msgs</depend>
  <depend>stereo_msgs</depend>
  <depend>image_transport</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>nodelet</depend>
  <depend>diagnostic_updater</depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>pointcloud_to_laserscan</build_depend>
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
